<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperSet</string>
    <string name="action_settings">Settings</string>
    <string name="splash_image_description">Splash</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="main_menu_button_play">Play</string>
    <string name="main_menu_button_exit">Exit</string>
    <string name="main_menu_button_settings">Settings</string>
    <string name="main_menu_button_scores">Server High Scores</string>
    <string name="main_menu_button_local_scores">Local High Scores</string>
    <string name="main_menu_title">SUPERSET</string>
    <string name="title_activity_single_player_game">Single Player Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_single_player_game_finished">SinglePlayerGameFinishedActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_check_server">CheckServerActivity</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="check_server_activity_title">CHECKING USER</string>
    <string name="check_server_activity_status_contacting">Contacting Server, please wait&#8230; It may take some while</string>
    <string name="check_server_activity_status_ioerror">Could not connect to server</string>
    <string name="check_server_activity_status_userok">User/Password OK!</string>
    <string name="check_server_activity_status_unknownuser">Unknown user! Please verify username/password</string>
    <string name="check_server_activity_status_error">Oops! Something went wrong.</string>
    <string name="check_server_activity_button">OK</string>
    <string name="register_user_activity_title">REGISTERING USER</string>
    <string name="register_user_activity_status_waiting">Press OK to register the user at the server.</string>
    <string name="register_user_activity_status_contacting">Contacting Server, please wait&#8230; It may take some while</string>
    <string name="register_user_activity_status_ioerror">Could not connect to server</string>
    <string name="register_user_activity_status_userok">User added!</string>
    <string name="register_user_activity_status_knownuser">User already exists!</string>
    <string name="register_user_activity_status_error">Oops! Something went wrong.</string>
    <string name="register_user_activity_button_ok">OK</string>
    <string name="register_user_activity_button_cancel">CANCEL</string>
    <string name="register_user_activity_label_user">User:</string>
    <string name="register_user_activity_label_password">Password:</string>
    <string name="delete_user_activity_title">DELETING USER</string>
    <string name="delete_user_activity_status_waiting">Press OK to unregister user at server. Warning: hiscores will be lost!</string>
    <string name="delete_user_activity_status_contacting">Contacting Server, please wait&#8230; It may take some while</string>
    <string name="delete_user_activity_status_ioerror">Could not connect to server</string>
    <string name="delete_user_activity_status_userdeleted">User deleted!</string>
    <string name="delete_user_activity_status_unknownuser">Unknown user/password!</string>
    <string name="delete_user_activity_status_error">Oops! Something went wrong.</string>
    <string name="delete_user_activity_button_ok">OK</string>
    <string name="delete_user_activity_button_cancel">CANCEL</string>
    <string name="delete_user_activity_label_user">User:</string>
    <string name="delete_user_activity_label_password">Password:</string>
    <string name="sp_game_finished_activity_title">SCORE</string>
    <string name="sp_game_finished_activity_label_user">User:</string>
    <string name="sp_game_finished_activity_label_score">Score:</string>
    <string name="sp_game_finished_activity_label_password">Password:</string>
    <string name="sp_game_finished_activity_label_server">Server:</string>
    <string name="sp_game_finished_activity_label_port">Port:</string>
    <string name="sp_game_finished_activity_button_send">Send</string>
    <string name="sp_game_finished_activity_button_dontsend">Skip</string>
    <string name="sp_game_finished_activity_button_continue">Continue</string>
    <string name="sp_game_finished_activity_status_send">Press \'Send\' to send the score to the server</string>
    <string name="sp_game_finished_activity_status_sending">Contacting server&#8230;</string>
    <string name="sp_game_finished_activity_status_ok">Score sent!</string>
    <string name="sp_game_finished_activity_status_ioerror">Error connecting to server!</string>
    <string name="sp_game_finished_activity_status_unknownuser">User not know at server!</string>
    <string name="sp_game_finished_activity_status_error">Oops! Something went wrong.</string>
    <string name="title_activity_delete_user">DeleteUserActivity</string>
    <string name="title_activity_sever_high_score">SeverHighScoreActivity</string>
    <string name="server_highscore_activity_title">SERVER HIGHSCORES</string>
    <string name="server_highscore_activity_status_contacting">Contacting Server for highscores, please wait&#8230;</string>
    <string name="server_highscore_activity_status_ioerror">Could not connect to server</string>
    <string name="server_highscore_activity_status_ok">Highscores received</string>
    <string name="server_highscore_activity_status_error">Oops! Something went wrong.</string>
    <string name="server_highscore_activity_button_ok">OK</string>
    <string name="title_activity_local_high_score">LocalHighScoreActivity</string>
    <string name="local_highscore_activity_title">LOCAL HIGHSCORES</string>
    <string name="local_highscore_activity_status_contacting">Reading highscores</string>
    <string name="local_highscore_activity_status_error">No highscores found</string>
    <string name="local_highscore_activity_status_ok"></string>
    <string name="local_highscore_activity_button_ok">OK</string>
    <string name="local_highscore_activity_button_reset">RESET</string>
    <string name="bar_status_start">Press play to start game...</string>
    
</resources>
