<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete_user_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.studioblueplanet.superset.CheckServerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center" >

		<TextView
	        android:id="@+id/delete_user_activity_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/delete_user_activity_title"
		    android:textSize="20sp"
		    android:textStyle="bold" >

		</TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center" >

		<TextView
	        android:id="@+id/delete_user_activity_label_user"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/delete_user_activity_label_user"
		    android:textSize="20sp" 
		    android:layout_weight="0.3">
		</TextView>
		<EditText
		    android:id="@+id/delete_user_activity_value_user"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.7"
		    android:ems="10" >
		    <requestFocus />
		</EditText>		

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center" >

		<TextView
	        android:id="@+id/delete_user_activity_label_password"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/delete_user_activity_label_password"
		    android:textSize="20sp" 
		    android:layout_weight="0.3">
		</TextView>
		<EditText
		    android:id="@+id/delete_user_activity_value_password"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.7"
		    android:ems="10" 
		    android:inputType="textPassword">
		    <requestFocus />
		</EditText>		
    </LinearLayout>        
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center" >

		<TextView
	        android:id="@+id/delete_user_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/delete_user_activity_status_waiting"
		    android:textSize="20sp" >

		</TextView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center" >

		    <Button
		        android:id="@+id/delete_user_button_ok"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/delete_user_activity_button_ok"  
		        android:onClick="buttonOkAction" 
		        android:layout_weight="0.5"/>	

		    <Button
		        android:id="@+id/delete_user_button_cancel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/delete_user_activity_button_cancel"  
		        android:onClick="buttonCancelAction"
		        android:layout_weight="0.5" />	

		    </LinearLayout>
    
    
</LinearLayout>
