<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/local_highscore_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.studioblueplanet.superset.CheckServerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center" >

		<TextView
	        android:id="@+id/local_highscore_activity_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/local_highscore_activity_title"
		    android:textSize="20sp"
		    android:textStyle="bold" >

		</TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:gravity="center" >

        <ListView
            android:id="@+id/local_highscore_activity_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center" >

		<TextView
	        android:id="@+id/local_highscore_activity_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/local_highscore_activity_status_contacting"
		    android:textSize="20sp" >

		</TextView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center" >

		    <Button
		        android:id="@+id/local_highscore_activity_button_ok"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:text="@string/local_highscore_activity_button_ok"  
		        android:onClick="buttonOkAction" />	
	
		    <Button
		        android:id="@+id/local_highscore_activity_button_reset"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:text="@string/local_highscore_activity_button_reset"  
		        android:onClick="buttonResetAction" />	
	
		    
	</LinearLayout>
    
    
</LinearLayout>