<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.studioblueplanet.superset.CheckServerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center" >

		<TextView
	        android:id="@+id/check_server_activity_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/check_server_activity_title"
		    android:textSize="20sp"
		    android:textStyle="bold" >

		</TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center" >

		<TextView
	        android:id="@+id/check_server_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/check_server_activity_status_contacting"
		    android:textSize="20sp" >

		</TextView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center" >

			    <Button
			        android:id="@+id/check_server_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/check_server_activity_button"  
			        android:onClick="buttonActionOk" />	

    </LinearLayout>
    
    
</LinearLayout>
