<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".TestActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="SUPERSET"
		    android:textSize="20dp"
		    android:textStyle="bold" >

		</TextView>

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="0.3" >

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical"
	        android:gravity="center" >

		    <Button
		        android:id="@+id/button_play"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/main_menu_button_play"  
		        android:onClick="buttonActionSinglePlayerGame" />
			    	        
        </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical"
	        android:gravity="center" >
			    
		    <Button
		        android:id="@+id/button_scores"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/main_menu_button_scores" 
		        android:onClick="buttonActionHighScores"  />
			    
        </LinearLayout>
        
	</LinearLayout>
        		
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="0.3" >
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical"
	        android:gravity="center" >

		    <Button
		        android:id="@+id/button_settings"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/main_menu_button_settings" 			         
		        android:onClick="buttonActionSettings" />
			    	        
        </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:orientation="vertical"
	        android:gravity="center"  >
			    
		    <Button
		        android:id="@+id/button_local_scores"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/main_menu_button_local_scores" 
		        android:onClick="buttonActionLocalHighScores"  />
			    
        </LinearLayout>
        
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="0.3" >

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1.0"
	        android:orientation="vertical" 
	        android:gravity="center" >
			    
		    <Button
		        android:id="@+id/button_exit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/main_menu_button_exit" 
		        android:onClick="buttonActionExit" />	
			        			    
        </LinearLayout>            
    </LinearLayout>
    
    
    


</LinearLayout>